# oqtopus-experiments

./: .gitignore  CLAUDE.md  README.md  TODO.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.local.md.template  CLAUDE.md  settings.json  settings.local.json.template
.claude/prompts/: new_experiment.md  plot_settings.md
.github/scripts/: template-utils.js  templates.js
.github/templates/: bundled-issue-template.md  claude-ui-template.md  help-template.md  individual-issue-template.md  manual-issue-template.md
.github/workflows/: claude-detection.yml  claude-issue-reaction-handler.yml  claude-to-issue-interactive.yml  claude.yml  direct-commands.yml  docs.yml  issue-creation.yml  test.yml
docs/: gen_experiment_docs.py  gen_ref_pages.py  index.md
docs/backends/: index.md  local.md  oqtopus.md
docs/examples/: README.md  __init__.py  index.md  qpu.md  simulation.md
docs/examples/anemone/: rabi.py  t1.py  transpile.py
docs/examples/local/: __init__.py  bernstein_vazirani.py  chsh.py  chsh_phase_scan.py  compare.py  deutsch_jozsa.py  grover.py  hadamard_test.py  interleaved_randomized_benchmarking.py  parallel_demo.py  parallel_rabi.py  parity_oscillation.py  rabi.py  rabi_parallel.py  ramsey.py  randomized_benchmarking.py  t1.py  t2_echo.py
docs/examples/qpu/: __init__.py  bernstein_vazirani.py  chsh.py  chsh_parallel.py  chsh_parallel_physical_qubit.py  chsh_phase_scan.py  chsh_phase_scan_parallel.py  custom_parallel.py  deutsch_jozsa.py  device.py  grover.py  hadamard_test.py  parallel_rabi.py  parity_oscillation.py  parity_oscillation_parallel.py  rabi.py  rabi_parallel.py  rabi_parallel_physical_qubit.py  ramsey.py  ramsey_parallel.py  randomized_benchmarking.py  t1.py  t1_parallel.py  t1_parallel_physical.py  t2_echo_parallel.py
docs/examples/qulacs/: __init__.py  bernstein_vazirani.py  chsh.py  chsh_parallel.py  chsh_phase_scan.py  chsh_phase_scan_parallel.py  deutsch_jozsa.py  grover.py  hadamard_test.py  parallel_rabi.py  parallel_rabi_analysis.ipynb  parity_oscillation.py  parity_oscillation_parallel.py  rabi.py  rabi_parallel.py  ramsey.py  randomized_benchmarking.py  t1.py  t2_echo.py
docs/experiments/: bernstein_vazirani.md  chsh.md  chsh_phase_scan.md  deutsch_jozsa.md  index.md  parity_oscillation.md  rabi.md  ramsey.md  randomized_benchmarking.md  t1.md  t2_echo.md
docs/getting-started/: installation.md  quickstart.md
src/oqtopus_experiments/: __init__.py  exceptions.py
src/oqtopus_experiments/backends/: __init__.py  local_backend.py  oqtopus_backend.py
src/oqtopus_experiments/cli/: __init__.py  chsh.py  main.py  rabi.py  ramsey.py  t1.py  t2_echo.py
src/oqtopus_experiments/core/: __init__.py  base_experiment.py  data_manager.py
src/oqtopus_experiments/devices/: __init__.py  device_info.py
src/oqtopus_experiments/experiments/: __init__.py  bernstein_vazirani.py  chsh.py  chsh_phase_scan.py  deutsch_jozsa.py  grover.py  hadamard_test.py  interleaved_randomized_benchmarking.py  parity_oscillation.py  rabi.py  rabi_old.py  rabi_with_devices.py  ramsey.py  randomized_benchmarking.py  t1.py  t2_echo.py
src/oqtopus_experiments/models/: __init__.py  analysis_result.py  bernstein_vazirani_models.py  chsh_models.py  chsh_phase_scan_models.py  circuit_collection.py  config.py  deutsch_jozsa_models.py  experiment_result.py  grover_models.py  hadamard_test_models.py  parity_oscillation_models.py  rabi_models.py  ramsey_models.py  randomized_benchmarking_models.py  t1_models.py  t2_echo_models.py
src/oqtopus_experiments/utils/: __init__.py  statistics.py  (+3 more)
tests/: conftest.py  test_error_handling.py  test_multi_experiment_error_handling.py
tests/backends/: test_local_backend.py  test_local_backend_integration.py  test_oqtopus_backend.py
tests/core/: test_base_experiment.py  test_data_manager.py
tests/devices/: test_device_info.py
tests/experiments/: test_bernstein_vazirani.py  test_chsh.py  test_deutsch_jozsa.py  test_grover.py  test_hadamard_test.py  test_rabi.py  test_randomized_benchmarking.py
tests/models/: test_base.py  test_bernstein_vazirani_models.py  test_deutsch_jozsa_models.py  test_experiment_result.py  test_grover_models.py  test_parity_oscillation_models.py  test_randomized_benchmarking_models.py
tests/utils/: test_config_loader.py  test_display.py  test_statistics.py  test_validation.py
workspace/scripts/: test_usage.py
