[project]
name = "oqtopus-experiments"
version = "0.1.0"
description = "A quantum computing experiment library for OQTOPUS platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0 License"}
authors = [
    {name = "Takafumi Miyanaga", email = "orangekame3.dev@gmail.com"},
]
maintainers = [
    {name = "Takafumi Miyanaga", email = "orangekame3.dev@gmail.com"},
]
keywords = ["quantum", "computing", "research", "experiment", "qiskit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.0.0",
    # Core quantum computing libraries
    "qiskit<=1.3.0",
    "qiskit-aer>=0.13.0",
    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Data analysis and visualization
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "pandas>=2.0.0",
    "ipywidgets>=8.0.0",
    "networkx>=3.0.0",
    # Utilities
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.0",
    "tabulate>=0.9.0",
    "pylatexenc>=2.10",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "quri-parts-oqtopus>=1.0.3",
    "tranqu",
    "kaleido>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/orangekame3/oqtopus-experiments"
Repository = "https://github.com/orangekame3/oqtopus-experiments"
Documentation = "https://github.com/orangekame3/oqtopus-experiments#readme"
Issues = "https://github.com/orangekame3/oqtopus-experiments/issues"


[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B006",  # mutable default arguments (needed for CLI defaults)
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*.py" = ["B011"]  # assert False

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disable_error_code = ["import-untyped"]

# External libraries that don't have stubs
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "pandas-stubs.*",
    "scipy.*",
    "scipy-stubs.*",
    "qiskit.*",
    "qiskit_aer.*",
    "plotly.*",
    "rich.*",
    "tranqu.*",
    "quri_parts_oqtopus.*"
]
ignore_missing_imports = true

# Exclude workspace scripts that use removed CLI
[[tool.mypy.overrides]]
module = [
    "workspace.*"
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[[tool.mypy.overrides]]
module = [
    "qulacs.*",
    "quri_parts.*",
    "matplotlib.*",
    "plotly.*",
    "rich.*",
]
ignore_missing_imports = true
